--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "clsx": "^2.1.0",
     "eslint": "8.45.0",
     "eslint-config-next": "13.4.12",
+    "framer-motion": "^11.0.13",
     "negotiator": "^0.6.3",
     "next": "13.4.12",
     "postcss": "8.4.27",
