--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "dependencies": {
     "@formatjs/intl-localematcher": "^0.4.0",
     "@headlessui/react": "^1.7.18",
+    "@hookform/resolvers": "^3.3.4",
     "@reduxjs/toolkit": "^2.2.1",
+    "@sendgrid/mail": "^8.1.1",
     "@types/node": "20.4.5",
     "@types/react": "^18.2.25",
     "@types/react-dom": "18.2.7",
@@ -21,14 +23,16 @@
     "eslint-config-next": "13.4.12",
     "framer-motion": "^11.0.13",
     "negotiator": "^0.6.3",
-    "next": "13.4.12",
+    "next": "14.1.3",
     "postcss": "8.4.27",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.51.2",
     "react-icons": "^5.0.1",
     "react-redux": "^9.1.0",
     "tailwindcss": "3.3.3",
-    "typescript": "5.1.6"
+    "typescript": "5.1.6",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@types/negotiator": "^0.6.1",
